--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile project(':camera2basics')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'me.zhanghai.android.patternlock:library:2.0.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.commonsware.cwac:cam2:0.4.+'
 }
